--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://iamthulasinath.github.io/nxttrendz",
+  "homepage": "/",
   "name": "nxt-trendz-specific-product-details",
   "private": true,
   "version": "1.0.0",
